--- a/dtststak.dproj
+++ b/dtststak.dproj
@@ -1,11 +1,11 @@
 ﻿<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
     <PropertyGroup>
-        <ProjectGuid>{250AF8B4-C65B-46D7-AFF0-04187AC5C3E1}</ProjectGuid>
-        <MainSource>EZDSL3XE.dpk</MainSource>
+        <ProjectGuid>{960E67F8-F148-4511-94E4-F2B7F9BBE945}</ProjectGuid>
+        <MainSource>dtststak.dpr</MainSource>
         <Base>True</Base>
         <Config Condition="'$(Config)'==''">Debug</Config>
         <TargetedPlatforms>1</TargetedPlatforms>
-        <AppType>Package</AppType>
+        <AppType>Console</AppType>
         <FrameworkType>None</FrameworkType>
         <ProjectVersion>15.4</ProjectVersion>
         <Platform Condition="'$(Platform)'==''">Win32</Platform>
@@ -29,33 +29,27 @@
         <Base>true</Base>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Base)'!=''">
-        <GenPackage>true</GenPackage>
-        <DCC_S>false</DCC_S>
-        <SanitizedProjectName>EZDSL3XE</SanitizedProjectName>
-        <VerInfo_Locale>1033</VerInfo_Locale>
-        <DCC_F>false</DCC_F>
-        <DCC_E>false</DCC_E>
-        <DCC_N>false</DCC_N>
-        <DCC_OutputNeverBuildDcps>true</DCC_OutputNeverBuildDcps>
-        <RuntimeOnlyPackage>true</RuntimeOnlyPackage>
-        <VerInfo_Keys>CompanyName=;FileDescription=;FileVersion=1.0.0.0;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProductName=;ProductVersion=1.0.0.0;Comments=;CFBundleName=</VerInfo_Keys>
-        <DCC_Description>EZDSL package - Delphi 2009, revision D</DCC_Description>
-        <DCC_K>false</DCC_K>
-        <GenDll>true</GenDll>
         <DCC_ImageBase>00400000</DCC_ImageBase>
         <DCC_Namespace>System;Xml;Data;Datasnap;Web;Soap;Winapi;$(DCC_Namespace)</DCC_Namespace>
+        <DCC_F>false</DCC_F>
+        <DCC_N>false</DCC_N>
+        <SanitizedProjectName>dtststak</SanitizedProjectName>
+        <VerInfo_Keys>CompanyName=;FileDescription=;FileVersion=1.0.0.0;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProductName=;ProductVersion=1.0.0.0;Comments=;CFBundleName=</VerInfo_Keys>
+        <DCC_S>false</DCC_S>
+        <DCC_K>false</DCC_K>
+        <VerInfo_Locale>1033</VerInfo_Locale>
+        <DCC_E>false</DCC_E>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Base_Win32)'!=''">
         <DCC_Namespace>Winapi;System.Win;Data.Win;Datasnap.Win;Web.Win;Soap.Win;Xml.Win;Bde;$(DCC_Namespace)</DCC_Namespace>
         <VerInfo_Locale>1033</VerInfo_Locale>
-        <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
         <VerInfo_Keys>CompanyName=;FileDescription=;FileVersion=1.0.0.0;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProductName=;ProductVersion=1.0.0.0;Comments=</VerInfo_Keys>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_1)'!=''">
         <DCC_Define>RELEASE;$(DCC_Define)</DCC_Define>
+        <DCC_SymbolReferenceInfo>0</DCC_SymbolReferenceInfo>
         <DCC_LocalDebugSymbols>false</DCC_LocalDebugSymbols>
         <DCC_DebugInformation>0</DCC_DebugInformation>
-        <DCC_SymbolReferenceInfo>0</DCC_SymbolReferenceInfo>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_2)'!=''">
         <DCC_GenerateStackFrames>true</DCC_GenerateStackFrames>
@@ -66,22 +60,13 @@
         <DelphiCompile Include="$(MainSource)">
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
-        <DCCReference Include="rtl.dcp"/>
-        <DCCReference Include="EZDSLThd.PAS"/>
-        <DCCReference Include="EZDSLBAr.PAS"/>
-        <DCCReference Include="EZDSLBse.PAS"/>
-        <DCCReference Include="EZDSLBtr.PAS"/>
-        <DCCReference Include="EZDSLCol.PAS"/>
-        <DCCReference Include="EZDSLCts.PAS"/>
-        <DCCReference Include="EZDSLDbl.PAS"/>
-        <DCCReference Include="EZDSLHsh.PAS"/>
-        <DCCReference Include="EZDSLLst.PAS"/>
-        <DCCReference Include="EZDSLPQu.PAS"/>
-        <DCCReference Include="EZDSLQue.PAS"/>
-        <DCCReference Include="EZDSLRnd.PAS"/>
-        <DCCReference Include="EZDSLSkp.PAS"/>
-        <DCCReference Include="EZDSLStk.PAS"/>
-        <DCCReference Include="EZDSLSup.PAS"/>
+        <DCCReference Include="EZDSLCTS.PAS"/>
+        <DCCReference Include="EZDSLBSE.PAS"/>
+        <DCCReference Include="EZDSLSTK.PAS"/>
+        <DCCReference Include="EZDSLQUE.PAS"/>
+        <DCCReference Include="EZDSLPQU.PAS"/>
+        <DCCReference Include="EZDSLSUP.PAS"/>
+        <DCCReference Include="DTstGen.pas"/>
         <BuildConfiguration Include="Debug">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
@@ -96,17 +81,14 @@
     </ItemGroup>
     <ProjectExtensions>
         <Borland.Personality>Delphi.Personality.12</Borland.Personality>
-        <Borland.ProjectType>Package</Borland.ProjectType>
+        <Borland.ProjectType/>
         <BorlandProject>
             <Delphi.Personality>
                 <Source>
-                    <Source Name="MainSource">EZDSL3XE.dpk</Source>
+                    <Source Name="MainSource">dtststak.dpr</Source>
                 </Source>
             </Delphi.Personality>
             <Platforms>
-                <Platform value="Android">False</Platform>
-                <Platform value="iOSDevice">False</Platform>
-                <Platform value="iOSSimulator">False</Platform>
                 <Platform value="OSX32">False</Platform>
                 <Platform value="Win32">True</Platform>
                 <Platform value="Win64">False</Platform>
